@@ -5,6 +5,9 @@ Revision history for {{$dist->name}}
   - Fixed typos in Changes file (v0.3.3 was broken up into two
     sections).
 
+  - Removed reference to MooseX::Failover, which has been deleted from
+    CPAN.
+
 v0.3.3    2015-01-05 16:06:55+00:00 Europe/London
   [Documentation]
   - Fixed typo in POD markup.
